tests/cases/parser/literals/non_hex_ascii_escape_code.stderr
error: encountered unexpected character `h`. ASCII escape code must only contain hex digits
 --> $DIR/non_hex_ascii_escape_code.hash:3:8
2 |   
3 |   k := '\xhh';
  |          ^ here
